--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.21.0"
   },
   "devDependencies": {
+    "eslint": "^9.11.0",
+    "husky": "^9.1.6",
     "nodemon": "^3.1.4"
   }
 }
