--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ezequiel Suarez, Cristina Morales",
+  "author": "Ezequiel Suarez",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
@@ -19,5 +19,6 @@
     "husky": "^9.1.6",
     "nodemon": "^3.1.4",
     "standard": "^17.1.2"
+
   }
 }
